# NewKiAssist

./: .gitignore  KICAD_IPC_IMPLEMENTATION.md  README.md  SECURITY_SUMMARY.md  UI_FRAMEWORK_RESEARCH.md  UI_PREVIEW.html  build.bat  build.sh  index.html  installer.iss  kiassist.spec  package-lock.json  package.json  start.bat  start.sh  start_debug.bat  vite.config.ts
.github/workflows/: build.yml
docs/research/gemini-api-endpoint/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  QUICK_REFERENCE.md  README.md  REFERENCES.md  REPORT.md  SCOPE.md
docs/research/gemini-model-availability-2024/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  QUICK_REFERENCE.md  REFERENCES.md  REPORT.md  SCOPE.md
python-lib/: README.md  pyproject.toml
python-lib/kiassist_utils/: __init__.py  api_key.py  gemini.py  kicad_ipc.py  kicad_schematic.py  main.py  recent_projects.py  requirements_wizard.py
python-lib/newkiassist_utils/: __init__.py
python-lib/tests/: __init__.py  test_kicad_ipc.py  test_kicad_schematic.py  test_recent_projects.py  test_requirements_wizard.py
research/: README.md
research/circuit-generation-libraries/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  REFERENCES.md  REPORT.md  SCOPE.md
research/google-genai-library/: ANALYSIS.md  CHANGELOG.md  CODE_EXAMPLES.md  GAPS.md  PROPOSAL.md  README.md  REFERENCES.md  REPORT.md  SCOPE.md
research/kicad-python-library/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  README.md  REFERENCES.md  REPORT.md  SCOPE.md
research/python-backend-migration/: ANALYSIS.md  CHANGELOG.md  GAPS.md  PROPOSAL.md  REFERENCES.md  REPORT.md  SCOPE.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_key.rs  gemini.rs  kicad_ipc.rs  lib.rs  main.rs
src/components/: ChatBox.vue  KiCadInstanceSelector.vue  RequirementsWizard.vue
src/types/: pywebview.ts
